@@ -10,6 +10,7 @@ import edu.colorado.phet.common.phetcommon.model.property.CompositeBooleanProper
 import edu.colorado.phet.common.phetcommon.model.property.CompositeProperty;
 import edu.colorado.phet.common.phetcommon.model.property.ObservableProperty;
 import edu.colorado.phet.common.phetcommon.model.property.Property;
+import edu.colorado.phet.common.phetcommon.util.SimpleObserver;
 import edu.colorado.phet.common.phetcommon.util.function.Function0;
 import edu.colorado.phet.common.phetcommon.view.util.DoubleGeneralPath;
 
@@ -150,6 +151,10 @@ public class TrapezoidPool implements IPool {
 
     public void stepInTime( final double dt ) {
         waterVolume.set( waterVolume.get() + flowRatePercentage.get() * dt );
+    }
+
+    @Override public void addPressureChangeObserver( final SimpleObserver updatePressure ) {
+        waterVolume.addObserver( updatePressure );
     }
 
     public void reset() {
