@@ -1,3 +1,4 @@
+Pressure tab: Trapezoid scene: Fixed: Pressure doesn't update as water is added
 Pressure tab: Chamber scene: Added draggable masses
 Pressure tab: hide potted plant for scenes 2-3
 Pressure tab: Chamber scene: Added container shape
